# leap-c

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  CITATION.bib  Dockerfile  PROJECTS.md  README.md  TODO.md  analyze_sensitivities.sh  api.html  define_differentiable_mpc.html  genindex.html  getting_started.html  index.html  install_new_casadi_py311_x86_64.sh  installation.html  notebooks.html  objects.inv  parameter_management.html  py-modindex.html  pyproject.toml  ruff.toml  run.py  run_rl.py  search.html  searchindex.js  todo.md  troubleshooting.html
.devcontainer/: devcontainer.json
.doctrees/: api.doctree  define_differentiable_mpc.doctree  environment.pickle  getting_started.doctree  index.doctree  installation.doctree  notebooks.doctree  parameter_management.doctree  troubleshooting.doctree
.doctrees/api/: dynamics.doctree  index.doctree  mpc.doctree  ocp_env.doctree  utils.doctree
.doctrees/getting_started/: index.doctree
.doctrees/tutorials/: parameter_manager.doctree
.github/workflows/: acados-ci-image.yml  docker.yml  documentation.yml  prepare_acados.yml  ruff.yml  run_ruff.yml  tests.yml
_modules/: index.html
_modules/leap_c/: controller.html  dynamics.html  examples.html  mpc.html  planner.html  run.html  torch.html  trainer.html
_sources/: index.md.txt  installation.md.txt  notebooks.md.txt
_sources/getting_started/: index.md.txt
_sources/tutorials/: parameter_manager.md.txt
api/: dynamics.html  index.html  mpc.html  ocp_env.html  utils.html
api/il/: index.html
api/nn/: index.html
api/rl/: index.html
docker/: Dockerfile  README.md  build.sh  run.sh  setup-ubuntu-gpu.sh
docker/.devcontainer/: .gitignore  select-target.sh
docker/acados-ci/: Dockerfile  README.md
docs/: Makefile  README.md
docs/source/: conf.py  define_differentiable_mpc.md  getting_started.md  index.md  installation.md  notebooks.md  parameter_management.md  troubleshooting.md
getting_started/: index.html
leap_c/: __init__.py  acados_torch.py  collate.py  controller.py  jax.py  layer.py  linear_mpc.py  logger.py  mpc.py  parameters.py  planner.py  print_cfg.py  registry.py  repr.py  rollout.py  run.py  task.py  torch.py  torch_modules.py  trainer.py  util.py  utils.py
leap_c/autograd/: function.py  jax.py  torch.py
leap_c/diff_mpc/: data.py  function.py  initializer.py
leap_c/examples/: __init__.py  pendulum_on_cart.py  util.py
leap_c/nn/: autograd.py  clamped_tanh_transform.py  extractor.py  gaussian.py  mlp.py  modules.py  utils.py
leap_c/parameters/: __init__.py  base.py  data.py  manager.py
leap_c/rl/: __init__.py  buffer.py  ppo.py  replay_buffer.py  rollout_buffer.py  sac.py  sac_fop.py  sac_fop_const_init.py  sac_fop_init_strategies.py  sac_fou.py  (+5 more)
notebooks/: 01_msd_build_and_solve.py  02_msd_value_policy_maps.py  03_msd_sensitivities.py  04_heating_parameter_management.py  05_heating_forecasts.py  06_battery_arbitrage.py  07_advanced_sensitivities.py  08_prosumer.py  08_prosumer_observations.md  README.md  diff_mpc_tutorial.py  intro.py  minimal_mpc.py
playground/: reacher_nominal_mpc.py
scripts/: evaluate_racecar_qmatrix.py  render_trained_model.py  run_baseline.py  run_controller.py  run_dqn.py  run_dqn_mpc.py  run_sac.py  run_sac_fop.py  run_sac_zop.py  run_sac_zop_beta.py  run_smac_tuning.py  sac.py  test_race_car_example.py  train_racecar_sac_qmatrix.py
test_output/: config.yaml  events.out.tfevents.1757485966.hanjaeungs-MacBook-Air.local.63303.0  events.out.tfevents.1757486046.hanjaeungs-MacBook-Air.local.64200.0
tests/: test_notebooks.py
tutorials/: parameter_manager.html
(+345 files in other folders)
