[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leap-c"
version = "2025.0.0"
dependencies = [
  "casadi==3.7.2",
  "gymnasium==1.1.1",
  "scipy==1.15.2",
  "numpy==2.3.0",
  "pandas==2.3.0",
  "PyYAML==6.0.2",
  "acados_template"
]

requires-python = ">=3.11"
maintainers = [
  { name = "Dirk Reinhardt", email = "dirk.p.reinhardt@ntnu.no" },
  { name = "Jasper Hoffmann", email = "hoffmaja@informatik.uni-freiburg.de" },
  { name = "Leonard Fichtner", email = "fichtnel@cs.uni-freiburg.de" },
]
description = "Learning Predictive Control"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
  "Reinforcement Learning",
  "Imitation Learning",
  "Model Predictive Control",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.0",
  "pytest-cov==7.0.0",
  "pygame==2.6.1",
  "moviepy==2.2.1",
  "wandb==0.20.1",
  "tensorboard==2.19.0",
  "gymnasium[mujoco]==1.1.1",
  "numpy-quaternion==2024.0.8",
  "matplotlib==3.10.5",
  "PyQt5==5.15.11"
]
rendering = [
  "pygame==2.6.1",
  "moviepy==2.2.1"
]
docs = [
  "sphinx==8.2.3",
  "sphinx_rtd_theme==3.0.2",
  "myst-parser==4.0.1"
]
dev = [
  "leap_c[rendering]",
  "leap_c[docs]",
  "leap_c[test]",
  "pre-commit==4.3.0",
  "ruff==0.12.12"
]
wandb = ["wandb==0.20.1"]


[tool.setuptools]
packages = ["leap_c"]

[project.urls]
Repository = "https://github.com/leap-c/leap-c"
"Bug Tracker" = "https://github.com/leap-c/leap-c/issues"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["external"]

[tool.ruff.lint]
ignore = ["E741"]
extend-select = [
    "I",
    "NPY",
    "UP045",
    "E501",
]
