[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leap-c"
version = "2025.0.0"
dependencies = [
  "acados-template",
  "casadi",
  "numpy>=1.26.0",
]

requires-python = ">=3.11"
maintainers = [
  { name = "Dirk Reinhardt", email = "dirk.p.reinhardt@ntnu.no" },
  { name = "Jasper Hoffmann", email = "hoffmaja@informatik.uni-freiburg.de" },
  { name = "Leonard Fichtner", email = "leonard.fichtner@imtek.uni-freiburg.de" },
]
description = "Learning Predictive Control"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = [
  "Model Predictive Control",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
torch = ["torch>=2.0.0"]
jax = ["jax"]
notebooks = [
  "marimo>=0.13.0",
]
docs = [
  "sphinx",
  "furo",
  "myst-parser",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinxcontrib-mermaid",
]
dev = [
  "leap_c[docs]",
  "leap_c[test]",
  "leap_c[torch]",
  "pre-commit",
  "ruff",
]

[tool.setuptools]
packages = ["leap_c"]

[tool.uv.sources]
acados-template = { path = "external/acados/interfaces/acados_template" }

[project.urls]
Repository = "https://github.com/leap-c/leap-c"
"Bug Tracker" = "https://github.com/leap-c/leap-c/issues"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["external", "notebooks"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
ignore = [
  "E741",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
]
extend-select = [
    "D",
    "I",
    "NPY",
    "UP045",
    "E501",
]
